# rescript-react-intl-extractor

./: .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  compiler-libs-406  dune  dune-project  esy.lock.json  package.json  rescript-react-intl-extractor.opam  setVersion.js  src
.github/workflows/: ci.yml  get_artifact.js  get_filenames.js  print_esy_cache.js
docker/: Dockerfile  README.md
esy.lock/: index.json
lib/: ExtractIntlMessages.re  ExtractionIterator.ml  ExtractionIterator.mli  ExtractionIterator.re  ExtractionIterator.rei  ExtractionMapper.re  Extractor.ml  Extractor.re  Message.ml  Message.re  Option.ml  Option.re  dune  jbuild
rescript_parser/: dune
scripts/: createZip.js  format.sh  setVersion.js
test/: CmdLine.re  RunTests.re  Test.ml  Test.re  dune
test/__snapshots__/: Duplicates.7c1a73e6.0.snapshot  Duplicates.cbcdac93.0.snapshot  Extract.372ae0d1.0.snapshot  Extract.a27e9fd5.0.snapshot  IntlPpx.0d7c125f.0.snapshot  ReScript.18d405ea.0.snapshot
test/lib/: CmdLine.re  TestFramework.re  Tests.re
test/test1/: Test_1_1.re
test/test2/: Test_2_1.re
test/test3/: Test_1_3.re
test/testData/test1/: Test_1_1.re  Test_1_1.res
test/testData/test1/subdir/: Test_1_3.re  Test_1_3.res
test/testData/test3/: Test_3_1.re  Test_3_1.res  Test_3_2.re  Test_3_2.res  Test_3_3.res
test/testData/test4/: Test_4_1.res
test/testData/test5/: Test_5_1.res
test/testData/testEscape/: Test_Escape.res
testData/test1/: Test_1_1.re
testData/test1/subdir/: Test_1_2.re
testData/test2/: Test_2_1.re
testData/test3/: Test_3_3.re
testData/test4/: Test_4_1.res
testData/test4/subdir/: Test_4_2.res  Test_4_3.res
testData/test5/: Test_5_1.re  Test_5_2.res
tests/: commandLineOptions.test.js  extraction.test.js  extractionPartial.test.js  package-lock.json  package.json  test1.test.js
tests/test1/subdir/: Test_1_2.re
